- removed predicates - added generation of Method bodies (AddGetters, AddSetters, AddConstructors)    => open issue #17: types used in method bodies are not yet added to the imports of a Type. - Annotation's parameter value now may be an Object. - Renamed @ImmutableBean to @Immutable and @MutableBean to @Mutable. These annotation are now evaluated to override the transformation. - Introduced TypeTransformerProvider - a provider that knows about all transformers configured in the Spring configuration. - Add Type.Kind as a preparation of enum and annotation-types. - New Transformer RemovedJcgAnnotations to remove jcg-specific annotations. - SimpleName and QualifiedName are now Comparable. - @TransformWith may now be used to define a sequence of Transformers used to transform a type. Like @Mutable and @Immutable, this overrides the transformation process of a type. In the future, this annotation might also be used to define the transformation of a package (=> package-info.java) - Implemented a FileGenerator

--- a/src/main/resources/templates/type/class.vm
+++ b/src/main/resources/templates/type/class.vm
@@ -14,14 +14,25 @@ $type.toString() {
 #foreach( $attribute in $type.fields )
     $attribute.toString();
 #end
-
 #foreach( $method in $type.methods )
+#if( $method.isConstructor() )
+
+    $method.toString() {
+$codeUtil.indent($method.methodBody, 2)
+    }
+#end
+#end
+#foreach( $method in $type.methods )
+#if(!$method.isConstructor())
 #if( $method.abstract)
+
     $method.toString();
 #else
+
     $method.toString() {
-        // TODO: method body
+$codeUtil.indent($method.methodBody, 2)
     }
+#end
 #end
 #end
 }
