--- a/src/main/resources/templates/type/interface.vm
+++ b/src/main/resources/templates/type/interface.vm
@@ -2,7 +2,7 @@ $codeUtil.fileComment()
 package $type.getName().getPackage();
 
 #foreach( $import in $type.imports )
-import $import;
+$import;
 #end
 
 $codeUtil.toJavaDocComment($type.comment, 80)
